# chesslib

./: .gitignore  README.md  board.cpp  board.h  chesslib.org
applications/: stockfishWrapper.cpp
docs/: umlChess.txt
src/: CMakeLists.txt  board.cpp  board.h  boardtest.cpp  game.cpp  move.cpp  move.h  piece.cpp  piece.h  square.cpp  square.h  structures.cpp  structures.h
src/cli/: game.h  structures.cpp
src/includes/: game.h  structures.h
src/lisp/: board.lisp
tests/: basicchess.cpp  boardtest.cpp  testBoardInput.txt  testStructures.cpp
